--- a/unit/viv/pom.xml
+++ b/unit/viv/pom.xml
@@ -61,6 +61,13 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+
 	</dependencies>
 
 
